<resources>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">ZooChat</string>
    <string name="wellcome_splash">Wellcome to ZooChat</string>
    <string name="wellcome_to_login">Wellcome to login</string>
    <string name="wellcome_to_register">Wellcome to register</string>
    <string name="numbe_phone">Number phone</string>
    <string name="password">Password</string>
    <string name="Re_type_password">Re-type Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password ? </string>
    <string name="login">Login</string>
    <string name="login_fail">Login fail</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="err">An error occurred, please try again</string>
    <string name="parameter_missing">You must complete the information</string>
    <string name="password_not_same">Passwords do not match</string>
    <string name="register_success">Register success</string>
    <string name="register_fail">Register fail</string>
    <string name="retrieve_data_error">Retrieve_data_error</string>
    <string name="not_connect_internet">No network connection</string>
    <string name="try_again">Try</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter your message here</string>
    <string name="enter_number_phone">Enter number phone</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="message">Message</string>
    <string name="friend">Friends</string>
    <string name="watched">Watched</string>
    <string name="friend_list">List Friends</string>
    <string name="friend_request">Invitation</string>
    <string name="search">Search</string>
    <string name="add_friend">Add</string>
    <string name="not_found">Not found</string>
    <string name="err_voley">Err from voley</string>
    <string name="sent_invitations">Sent</string>
    <string name="button_ok">Agree</string>
    <string name="button_no">butter</string>
</resources>
