<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ngochung.app.chat_nodejs_android.RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@mipmap/logo" />
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/wellcome_to_register"
        android:textColor="@color/colorwhite"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />
    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/layout_register"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/numbe_phone"
            android:id="@+id/ed_re_phone"
            style="@style/edittext_register"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/layout_register"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/name"
            style="@style/edittext_register"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ed_re_name"
           />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/layout_register"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/password"
            style="@style/edittext_register"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ed_re_pass"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/layout_register"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/Re_type_password"
            style="@style/edittext_register"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ed_re_rp_pass"
   />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/layout_register"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/email"
            style="@style/edittext_register"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/ed_re_email"
             />
    </LinearLayout>

    <Button
        android:textSize="18sp"
        android:textColor="@color/colorwhite"
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="15dp"
        android:background="@mipmap/background_bt"
        android:text="@string/register" />


</RelativeLayout>
